changed opening times to black to avoid contrasting error as reported by accessability report

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@
 
 .opening-times {
     float: left;
-    color: white;
+    color: black;
 }
 
 .opening-times h3 {
